# agent-skill-linter

./: .gitignore  README.md  SKILL.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: checklist-manifesto-mapping.md
docs/adr/: 0001-skill-subdirectory-layout.md  0002-semantic-review-in-skill-md.md  0003-pep723-script-entry-point.md  0004-plugin-layout-support.md
skill/: SKILL.md
skill/references/: fix-templates.md  layouts.md  semantic-rules.md
skill/scripts/: fixers.py  linter.py  rules.py  skill-lint.py
src/agent_skill_linter/: fixers.py  linter.py  rules.py
tests/: test_rules.py
tests/fixtures/command-only-workflow/: SKILL.md
tests/fixtures/dense-skill/: SKILL.md
tests/fixtures/no-pep723/: SKILL.md
tests/fixtures/no-pep723/scripts/: skill-lint.py
tests/fixtures/semantic-sections/: SKILL.md
tests/fixtures/valid-plugin/: LICENSE  README.md
tests/fixtures/valid-plugin/.claude-plugin/: plugin.json
tests/fixtures/valid-plugin/shared_lib/: __init__.py
tests/fixtures/valid-plugin/skills/skill-one/: SKILL.md
tests/fixtures/valid-plugin/skills/skill-one/scripts/: emit.py
tests/fixtures/valid-plugin/skills/skill-two/: SKILL.md
tests/fixtures/valid-plugin/skills/skill-two/scripts/: emit.py
tests/fixtures/valid-skill/: SKILL.md
tests/fixtures/valid-skill-subdir/: .gitroot  README.md
tests/fixtures/valid-skill-subdir/skill/: SKILL.md
