[project]
name = "dev"
version = "0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    # Runtime deps of skill/scripts/skill-lint.py — listed here for local dev
    # convenience (uv run pytest). The script declares them via PEP 723 inline
    # metadata for standalone use.
    "skills-ref",
    "click",
    "pyyaml",
    "rich",
]

[tool.ruff]
target-version = "py312"
line-length = 99
